# Autonomous-AI-Agent-Payments-on-Solana

./: .gitignore  ArchitecturePlan.md  QUICKSTART.md  README.md  demo.html  docker-compose.yml  package-lock.json  package.json  test-wallet-wsol.json  tsconfig.json  wsol-vault-config.json
anchor/: Anchor.toml  Cargo.toml  package-lock.json  package.json
anchor/programs/flow-vault/: Cargo.toml
anchor/programs/flow-vault/src/: errors.rs  events.rs  lib.rs
anchor/programs/flow-vault/src/instructions/: create_vault.rs  emergency_pause.rs  init_config.rs  mod.rs  register_provider.rs  settle_batch.rs  withdraw.rs
anchor/programs/flow-vault/src/state/: global_config.rs  mod.rs  provider.rs  vault.rs
anchor/tests/: flow-vault.ts
examples/: coinbase-cdp-integration.ts  mcp-agent-demo.ts  package-lock.json  package.json  phantom-cash-example.ts  x402-api-demo.ts
