[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.resolutions]
solana-program = "2.3.1"
solana-sdk = "2.3.1"
solana-instruction = "2.3.1"
solana-frozen-abi = "2.3.0"
solana-frozen-abi-macro = "2.3.0"
solana-zk-sdk = "2.3.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

